--- a/stylesheets/base/_color.scss
+++ b/stylesheets/base/_color.scss
@@ -15,6 +15,7 @@ $font-white: rgb(255, 255, 255);
 $white: rgb(255, 255, 255);
 $white-900: rgba(255, 255, 255, 0.9);
 $white-500: rgba(255, 255, 255, 0.5);
+$white-250: rgba(255, 255, 255, 0.25);
 $white-100: rgba(255, 255, 255, 0.1);
 
 $card-bg: #eeeeee;
@@ -23,5 +24,6 @@ $ocean: #cee4ef;
 
 $red-500: rgba(255, 80, 89, 0.7);
 $green-500: rgba(80, 234, 197, 0.7);
+$orange-500: rgba(195, 96, 66, 0.5);
 
 $teacher-bg: #efefef;
