--- a/stylesheets/footer.scss
+++ b/stylesheets/footer.scss
@@ -81,6 +81,7 @@ body {
 }
 @media screen and (min-width: 320px) and (max-width: 800px) {
 	.footer {
+		margin-top: 8rem;
 		padding-top: 7%;
 		padding-bottom: 7%;
 		.footer-logo {
