--- a/stylesheets/base/_mixin.scss
+++ b/stylesheets/base/_mixin.scss
@@ -108,3 +108,8 @@
   background: -webkit-linear-gradient(0deg, rgba(222,222,222, 1) 0%, rgba(235,235,235,1) 100%);
   background: linear-gradient(0deg, rgba(222,222,222, 1) 0%, rgba(235,235,235,1) 100%);
 }
+@mixin lesson-card-bg(){
+  background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(226,227,236, 0.9) 100%);
+  background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(226,227,236, 0.9) 100%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(226,227,236, 0.9) 100%);
+}
