--- a/stylesheets/css/header.css
+++ b/stylesheets/css/header.css
@@ -7,6 +7,28 @@ html { font-size: 10px; }
 
 body { width: 100%; overflow-x: hidden; }
 
+@-webkit-keyframes bounceInUp { from,
+  60%,
+  75%,
+  90%,
+  to { -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+  from { opacity: 0; -webkit-transform: translate3d(0, 30px, 0); transform: translate3d(0, 30px, 0); }
+  60% { opacity: 1; -webkit-transform: translate3d(0, -10px, 0); transform: translate3d(0, -10px, 0); }
+  75% { -webkit-transform: translate3d(0, 5px, 0); transform: translate3d(0, 5px, 0); }
+  90% { -webkit-transform: translate3d(0, -5px, 0); transform: translate3d(0, -5px, 0); }
+  to { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); } }
+@keyframes bounceInUp { from,
+  60%,
+  75%,
+  90%,
+  to { -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+  from { opacity: 0; -webkit-transform: translate3d(0, 30px, 0); transform: translate3d(0, 30px, 0); }
+  60% { opacity: 1; -webkit-transform: translate3d(0, -10px, 0); transform: translate3d(0, -10px, 0); }
+  75% { -webkit-transform: translate3d(0, 5px, 0); transform: translate3d(0, 5px, 0); }
+  90% { -webkit-transform: translate3d(0, -5px, 0); transform: translate3d(0, -5px, 0); }
+  to { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); } }
+.bounceInUp { -webkit-animation-name: bounceInUp; animation-name: bounceInUp; }
+
 .header { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-bottom: 3px solid #1338d1; }
 .header .header-left { width: calc((79.97% / 4) + 10%); height: 15rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-right: 3px solid #1338d1; padding-left: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; }
 .header .header-left .header__logo { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 50%; }
@@ -15,28 +37,37 @@ body { width: 100%; overflow-x: hidden; }
 .header .header-left .header__brand { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 50%; margin-top: 1rem; }
 .header .header-left .header__brand a { width: 100%; text-decoration: none; text-align: center; color: #1338d1; font-size: 1.4rem; line-height: 1.7rem; font-family: 'Lachata'; font-weight: bold; letter-spacing: 0.1rem; display: block; }
 .header .header-right { width: calc((79.97% * 0.75) + 10.03%); height: 15rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.header .header-right .header__weather { width: 100%; height: 70%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-bottom: 3px solid #1338d1; padding-left: 5%; padding-right: 15%; padding-top: 2%; padding-bottom: 2%; }
-.header .header-right .header__weather .waether-tab { width: calc(97% / 4); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.header .header-right .header__weather .waether-tab .waether-tab__name { width: 100%; height: 30%; color: #cccccc; }
-.header .header-right .header__weather .waether-tab .waether-tab__content { width: 100%; height: 70%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-location { width: 100%; height: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; font-family: 'oACYCZno'; font-weight: bold; color: #606060; font-size: 1.5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-icon { width: 40%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; align-items: flex-end; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-icon img { height: 80%; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-text { width: 60%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; font-family: 'oACYCZno'; padding-top: 3%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-text .content-text__max { color: #ff5059; font-size: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; align-items: flex-end; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-text .content-text__max span { color: #999999; font-size: 1.4rem; margin-left: 0.7rem; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-text .content-text__min { margin-top: 0.7rem; color: #97b5ff; font-size: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: flex-end; -moz-align-items: flex-end; -ms-align-items: flex-end; align-items: flex-end; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-text .content-text__min span { color: #999999; font-size: 1.4rem; margin-left: 0.7rem; }
-.header .header-right .header__weather .waether-tab .waether-tab__content .content-text .content-text__surf { color: #1338d1; font-size: 1.8rem; font-family: 'oACYCZno'; font-weight: bold; margin-left: -1.5rem; }
-.header .header-right .header__weather .waether-dir { margin-top: 0.5rem; width: 3%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
-.header .header-right .header__weather .waether-dir .dir-up { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-right .header__weather .waether-dir .dir-up img { width: 60%; cursor: pointer; }
-.header .header-right .header__weather .waether-dir .dir-down { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
-.header .header-right .header__weather .waether-dir .dir-down img { cursor: pointer; width: 60%; -webkit-transform: rotate(180deg); -ms-transform: rotate(180deg); transform: rotate(180deg); }
-.header .header-right .header__nav { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 30%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 18%; }
+.header .header-right .header__weather-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 60%; position: relative; }
+.header .header-right .header__weather-wrapper .header-weather { width: 100%; height: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-bottom: 3px solid #1338d1; position: relative; }
+.header .header-right .header__weather-wrapper .header-weather .weather { width: 100%; height: 100%; position: relative; display: none; }
+.header .header-right .header__weather-wrapper .header-weather .weather.current { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-bg { width: 100%; height: 100%; overflow: hidden; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-bg img { width: 100%; position: absolute; top: 0; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content { position: absolute; top: 0; left: 0; width: 80%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__time { width: 5%; background-color: rgba(255, 255, 255, 0.25); border-radius: 7rem; color: white; font-family: 'oACYCZno'; font-size: 1.4rem; padding: 1.5rem 2.5rem; margin-left: 5%; text-align: center; opacity: 0; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__time.show-up { -webkit-animation: bounceInUp 0.5s ease; animation: bounceInUp 0.5s ease; opacity: 1; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info { width: 55%; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; width: calc(85% / 3); height: 6rem; margin-right: 5%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; background-color: rgba(255, 255, 255, 0.25); border-radius: 7rem; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; opacity: 0; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab.show-up { -webkit-animation: bounceInUp 0.5s ease; animation: bounceInUp 0.5s ease; opacity: 1; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:hover { background-color: rgba(19, 56, 209, 0.5); }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:nth-of-type(2).show-up { -webkit-animation: bounceInUp 0.5s ease 0.1s; animation: bounceInUp 0.5s ease 0.1s; opacity: 1; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:nth-of-type(3) .info-tab__icon { width: 20%; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab:nth-of-type(3).show-up { -webkit-animation: bounceInUp 0.5s ease 0.2s; animation: bounceInUp 0.5s ease 0.2s; opacity: 1; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab .info-tab__icon { width: 30%; margin-right: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab .info-tab__icon img { width: 100%; }
+.header .header-right .header__weather-wrapper .header-weather .weather .weather-content .weather-content__info .info-tab .info-tab__text { width: 20%; font-size: 1.2rem; color: white; font-family: 'oACYCZno'; }
+.header .header-right .header__weather-wrapper .header-waether-dir { position: absolute; right: 0; top: 15%; width: 20%; height: 70%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 15%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; }
+.header .header-right .header__weather-wrapper .header-waether-dir .dir-up { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; opacity: 0.6; }
+.header .header-right .header__weather-wrapper .header-waether-dir .dir-up:hover { -webkit-transform: translateY(-10px); -ms-transform: translateY(-10px); transform: translateY(-10px); opacity: 1; }
+.header .header-right .header__weather-wrapper .header-waether-dir .dir-up img { height: 50%; cursor: pointer; -webkit-transform: rotate(-90deg); -ms-transform: rotate(-90deg); transform: rotate(-90deg); }
+.header .header-right .header__weather-wrapper .header-waether-dir .dir-down { width: 100%; height: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; opacity: 0.6; }
+.header .header-right .header__weather-wrapper .header-waether-dir .dir-down:hover { -webkit-transform: translateY(10px); -ms-transform: translateY(10px); transform: translateY(10px); opacity: 1; }
+.header .header-right .header__weather-wrapper .header-waether-dir .dir-down img { cursor: pointer; height: 50%; -webkit-transform: rotate(90deg); -ms-transform: rotate(90deg); transform: rotate(90deg); }
+.header .header-right .header__nav { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; height: 40%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 18%; }
 .header .header-right .header__nav .nav-tab { width: calc(100% / 3); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; cursor: pointer; text-decoration: none; }
-.header .header-right .header__nav .nav-tab.active { width: calc(100% / 3); height: 100%; background: url("../../images/common/wave-red.svg"); background-size: 20%; background-position: center center; background-repeat: no-repeat; }
-.header .header-right .header__nav .nav-tab p { font-family: 'Do Hyeon', sans-serif; color: #1338d1; font-size: 1.8rem; }
+.header .header-right .header__nav .nav-tab.active { width: calc(100% / 3); height: 100%; background: #ff5059; }
+.header .header-right .header__nav .nav-tab.active p { color: white; }
+.header .header-right .header__nav .nav-tab p { font-family: 'Do Hyeon', sans-serif; color: #1338d1; font-size: 2rem; }
 
 .mobile-menu { display: none; }
 
@@ -48,8 +79,8 @@ body { width: 100%; overflow-x: hidden; }
   .header .header-left .header__brand { width: 100%; padding-right: 0; margin-top: 0.6rem; }
   .header .header-left .header__brand a { width: 100%; font-size: 1rem; line-height: 1.2rem; }
   .header .header-right { width: 100%; height: auto; }
-  .header .header-right .header__weather { display: none; }
+  .header .header-right .header__weather-wrapper { display: none; }
   .header .header-right .header__nav { height: 3.5rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 0; }
-  .header .header-right .header__nav .nav-tab a { font-size: 1.6rem; } }
+  .header .header-right .header__nav .nav-tab p { font-size: 1.6rem; } }
 
 /*# sourceMappingURL=header.css.map */
